<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".ImcCalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
    <androidx.cardview.widget.CardView
        android:id="@+id/hombreSelecionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/selecionado"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"


            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/outline_boy_24"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            />
    <androidx.cardview.widget.CardView
        android:id="@+id/mujerSelecionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        app:cardCornerRadius="10dp"

        android:padding="10dp"
        android:backgroundTint="@color/fondo_recuadros"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"

            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/outline_girl_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/female"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondo_recuadros"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/fondo_recuadros"
        app:cardCornerRadius="10dp"
        android:padding="10dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/height"/>
        <TextView
            android:id = "@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120 cm"
            android:textSize="40dp"
            android:textColor="@color/white"
            />
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="80"
            android:valueTo="250"
            android:stepSize="1"
            />
    </LinearLayout>
    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fondo_recuadros"
            android:layout_weight="0.5"
            app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/fondo_recuadros"
        app:cardCornerRadius="10dp"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/weight"/>
        <TextView
            android:id="@+id/pesoValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="70"
            android:textSize="40dp"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/menosPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/botones"
                android:src="@drawable/outline_heart_minus_24"


                />
            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/masPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/botones"
                android:src="@drawable/outline_exposure_plus_1_24"
                />
        </LinearLayout>
    </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>
       <androidx.cardview.widget.CardView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.5"
           android:backgroundTint="@color/fondo_recuadros"
           app:cardCornerRadius="10dp"

           >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/fondo_recuadros"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/age"/>
        <TextView
            android:id="@+id/edadValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textSize="40dp"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/menosEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/botones"
                android:src="@drawable/outline_heart_minus_24"


                />
            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/masEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/botones"
                android:src="@drawable/outline_exposure_plus_1_24"
                />
        </LinearLayout>
    </LinearLayout>
       </androidx.cardview.widget.CardView>
    </LinearLayout>


        <Button
            android:id="@+id/moverseResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:text="@string/calculate"
            />

</LinearLayout>